# dd1367-project

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README  README.md
.github/workflows/: build-and-lint.yaml  clang-format.yaml  init-build-artifacts.yaml
scripts/: build-ci.sh
src/: main.cpp
